--- a/02_crud_coures/package.json
+++ b/02_crud_coures/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jhon Edison Hurtado",
@@ -12,5 +13,8 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "mongoose": "^8.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
