--- a/02_crud_coures/package.json
+++ b/02_crud_coures/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jhon Edison Hurtado",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.30.1",
     "mongoose": "^8.10.1"
   },
   "devDependencies": {
