--- a/03_parcial1/.env
+++ b/03_parcial1/.env
@@ -1,3 +1,3 @@
 PORT=4000
 DB_URL=mongodb://root:root@localhost:27017/parcial_01?authSource=admin
-JWT_SECRET_KEY=asdf
+JWT_SECRET_KEY=32c83706cb940f6ad08dd44a9814d9d97fb6bd165cc8e3a2650e89e8
