--- a/web_project/back/.env
+++ b/web_project/back/.env
@@ -1,3 +1,10 @@
 PORT=4000
 DB_URL=mongodb://root:root@localhost:27017/web_project?authSource=admin
 JWT_SECRET_KEY=6bd165cc840f6ad08dd44a9814d9d97fb0e89e8e3a26532c83706cb9
+JWT_RECOVERY_PASS_KEY=c840f6a6bd165cd08dd449e8e3a2653a9814d9d97fb0e82c83706cb9
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=a00e7dceca5bbe
+SMTP_PASS=d56fc981399a10
