--- a/web_project/back/package.json
+++ b/web_project/back/package.json
@@ -23,11 +23,13 @@
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "mongoose": "^8.12.1",
+    "nodemailer": "^6.10.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
