--- a/profe/CrudCursosConAuth+CORS/package.json
+++ b/profe/CrudCursosConAuth+CORS/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "crud_courses",
+  "name": "crudcursos",
   "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jhon Edison Hurtado",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
