--- a/web_project/back/package.json
+++ b/web_project/back/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jwt-simple": "^0.5.6",
@@ -27,6 +28,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "@types/nodemailer": "^6.4.17",
